<resources>
    <string name="app_name">Stylish</string>
    <string name="choose_products">Choose Products</string>
    <string name="txt_bottom_choose">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="make_payment">Make Payment</string>
    <string name="get_your_order">Get Your Order</string>
    <string name="get_started">Get Started</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back!</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">- OR Continue with -</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="create_an">Create an</string>
    <string name="account">account</string>
    <string name="confirm_password">ConfirmPassWord</string>
    <string name="create_account">Create Account</string>
    <string name="by_clicking...">By clicking the</string>
    <string name="button_you_agree..."> button, you agree</string>
    <string name="register">Register</string>
    <string name="to_the_public_offer">to the public offer</string>
    <string name="i_already_have_an_account">I Already Have an Account</string>
    <string name="forgot">Forgot</string>
    <string name="password1">password?</string>
    <string name="we_will_send">* We will send you a message to set or reset your new password</string>
    <string name="submit">Submit</string>
    <string name="you_want_authentic_here_you_go">You want Authentic, here you go!</string>
    <string name="find_it_here_buy_it_now">Find it here, buy it now!</string>
    <string name="search_any_product">Search any Product..</string>
    <string name="all_featured">All Featured</string>
    <string name="action_home">Home</string>
    <string name="action_wish_list">Wishlist</string>
    <string name="action_search">Search</string>
    <string name="action_setting">Setting</string>
    <string name="_52_082_iteams">52,082+ Iteams</string>
    <string name="email">Email</string>
    <string name="business_address_details">Business Address Details</string>
    <string name="pincode">Pincode</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="checkout">Checkout</string>
    <string name="personal_details">Personal Details</string>
    <string name="email_address">Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="country">Country</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="account_holder_s_name">Account Holder’s Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="save">Save</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="txt_blow_delivery">216 St Paul\'s Rd, London N1 2LL, UK Contact : +44-784232</string>
    <string name="shopping_bag">Shopping Bag</string>
    <string name="delivery_by">Delivery by</string>
    <string name="apply_coupons">Apply Coupons</string>
    <string name="select">Select</string>
    <string name="order_payment_details">Order Payment Details</string>
    <string name="order_amounts">Order Amounts</string>
    <string name="convenience">Convenience</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="know_more">Know More</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="order_total">Order Total</string>
    <string name="emi_available">EMI Available</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="details">Details</string>
</resources>