<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="MissingConstraints"
    android:background="@color/white">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         style="@style/TextStyleSignIn_Up"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="19dp"
        android:layout_marginStart="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyleSignIn_Up"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@+id/txt_Welcome"
        app:layout_constraintStart_toStartOf="@+id/txt_Welcome"/>
    <EditText
        android:id="@+id/edt_email"
        android:paddingStart="@dimen/padding_start_end"
        android:paddingEnd="@dimen/padding_start_end"
        style="@style/TextStyleEditText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="138dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bd_all_sign_up"
        android:autofillHints="username"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/xam4"
        android:hint="@string/username_or_email"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/edt_passWord"
        style="@style/TextStyleEditText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="224dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bd_all_sign_up"
        android:inputType="numberPassword"
        android:ems="10"
        android:textColorHint="@color/xam4"
        android:hint="@string/password"
        android:drawableStart="@drawable/group2"
        android:drawableEnd="@drawable/ic_eye"
        android:autofillHints="password"
        android:drawablePadding="@dimen/padding_start_end"
        android:paddingStart="@dimen/padding_start_end"
        android:paddingEnd="@dimen/padding_start_end"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtForgotPassword"
        style="@style/TextStyleForgotPassword"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="288dp"
        android:layout_marginStart="242dp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
       style="@style/btnStyleSignIN_Up"
        android:background="@drawable/bg_red_btn"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="355dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"/>
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="136dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="485dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/orContinue_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextStyleEditText"
            android:text="@string/or_continue_with"
            android:textColor="@color/xam5"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnImageGG"
            style="@style/btnImageStyle"
            android:src="@drawable/ic_google"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_btn_image"
            android:layout_marginStart="5dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnImageFaceBook"
            style="@style/btnImageStyle"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_btn_image"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_facebook"
            android:layout_centerVertical="true"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnImageApple"
            style="@style/btnImageStyle"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_btn_image"
            android:src="@drawable/ic_apple" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/CreateAccount"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/create_an_account"
            style="@style/TextStyleForgotPassword"
            android:textColor="@color/xam5"
            android:textSize="14sp"
            android:layout_marginEnd="1dp"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnImageSignUp"
            android:layout_width="57dp"
            android:layout_height="17dp"
            android:src="@drawable/sign_up"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@color/white" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>