<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="MissingConstraints"
    android:background="@color/white">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyleSignIn_Up"
        android:text="@string/create_an"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="19dp"
        android:layout_marginStart="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyleSignIn_Up"
        android:text="@string/account"
        app:layout_constraintTop_toBottomOf="@+id/txt_Welcome"
        app:layout_constraintStart_toStartOf="@+id/txt_Welcome"/>
    <EditText
        android:id="@+id/edt_email"
        android:paddingStart="@dimen/padding_start_end"
        android:paddingEnd="@dimen/padding_start_end"
        style="@style/TextStyleEditText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="138dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bd_all_sign_up"
        android:autofillHints="username"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/xam4"
        android:hint="@string/username_or_email"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/edt_passWord"
        style="@style/TextStyleEditText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="224dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bd_all_sign_up"
        android:inputType="numberPassword"
        android:textColorHint="@color/xam4"
        android:hint="@string/password"
        android:drawableStart="@drawable/group2"
        android:drawableEnd="@drawable/ic_eye"
        android:autofillHints="password"
        android:ems="10"
        android:drawablePadding="@dimen/padding_start_end"
        android:paddingStart="@dimen/padding_start_end"
        android:paddingEnd="@dimen/padding_start_end"/>
    <EditText
        android:id="@+id/edt_confirm_passWord"
        style="@style/TextStyleEditText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="310dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bd_all_sign_up"
        android:inputType="numberPassword"
        android:ems="10"
        android:textColorHint="@color/xam4"
        android:hint="@string/confirm_password"
        android:drawableStart="@drawable/group2"
        android:drawableEnd="@drawable/ic_eye"
        android:autofillHints="password"
        android:drawablePadding="@dimen/padding_start_end"
        android:paddingStart="@dimen/padding_start_end"
        android:paddingEnd="@dimen/padding_start_end"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/btnStyleSignIN_Up"
        android:background="@drawable/bg_red_btn"
        android:text="@string/create_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="452dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnLayout"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="384dp"
        android:layout_marginStart="30dp">
        <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextStyleNote"
        android:text="@string/by_clicking..."
        >
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextStyleNote"
        android:text="@string/register"
        android:textColor="@color/orange"
        android:layout_marginStart="1dp"/>
    <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextStyleNote"
        android:text="@string/button_you_agree..."
        android:layout_marginStart="1dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextStyleNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_the_public_offer"
        app:layout_constraintStart_toStartOf="@id/lnLayout"
        app:layout_constraintTop_toBottomOf="@id/lnLayout"/>
    <RelativeLayout
        android:layout_width="241dp"
        android:layout_height="136dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="547dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/orContinue_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextStyleEditText"
            android:text="@string/or_continue_with"
            android:textColor="@color/xam5"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnImageGG"
            style="@style/btnImageStyle"
            android:src="@drawable/ic_google"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_btn_image"
            android:layout_marginStart="23dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnImageFaceBook"
            style="@style/btnImageStyle"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_btn_image"
            android:layout_marginEnd="23dp"
            android:src="@drawable/ic_facebook"
            android:layout_centerVertical="true"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnImageApple"
            style="@style/btnImageStyle"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_btn_image"
            android:src="@drawable/ic_apple" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/CreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:text="@string/i_already_have_an_account"
            android:fontFamily="@font/font_poppins_400"
            android:textColor="@color/xam5"
            android:textSize="14sp"
            android:layout_marginEnd="1dp"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnImageLogin"
            android:layout_width="57dp"
            android:layout_height="17dp"
            android:src="@drawable/login"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@color/white" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>